vlib/v/checker/tests/map_with_result_value_err.vv
struct Foo {
	map1 map[string]!string
}

fn main() {
	_ := map[string]!string{}

	dump(map[string]!string{})
}
